--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whiskey Drop | Taste a new whiskey every month</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/57d3df9033.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--Nav-->
@@ -52,8 +53,10 @@
             <div class="row">
                 <div class="col-12 col-md-6">
                     <div class="media">
-                        <img src="Z:\bt test\test\assets\images\girl-image.png"  class="rounded-circle mr-3" 
+                        <div class="d-none d-sm-block">
+                        <img src=".\assets\images\girl-image.png"  class="rounded-circle mr-3" 
                         height=100 width=100>
+                    </div>
                         <div class="media-body">
                     <blockquote class="blockquote">
                         <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
@@ -63,10 +66,18 @@
                 </div>
                 </div>
                 <div class="col-12 col-md-6">
+                    <div class="media">
+                        <div class="d-none d-sm-block">
+                        <img src=".\assets\images\guy-image.png"  class="rounded-circle mr-3" 
+                        height=100 width=100>
+                    </div>
+                        <div class="media-body">
                     <blockquote class="blockquote">
                         <p>I haven't been sober for months!</p>
                         <footer class="blockquote-footer">Jane Doe on <cite title="Twitter">Twitter</cite></footer>
                     </blockquote>
+                    </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -83,21 +94,21 @@
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="feature">
-                        <h3>Feature 1</h3>
+                        <h3 ><i class="fa-solid fa-gift"></i> Feature 1</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="feature">
-                        <h3>Feature 2</h3>
+                        <h3> <i class="fa-regular fa-credit-card"></i> Feature 2</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
                     </div>
                 </div>
                 <div class="col-12 d-md-none d-lg-block col-lg-4">
                     <div class="feature">
-                        <h3>Feature 3</h3>
+                        <h3> <i class="fa-brands fa-x-twitter"></i> Feature 3</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
                     </div>
